src = [
  'main.cpp',
  'lock.cpp',
  'canvas.cpp',
  'event/bus.cpp',
  'cairo/context.cpp',
  'cairo/surface.cpp',
  'cairo/source.cpp',
  'pango/font.cpp',
  'pango/layout.cpp',
  'x/connection.cpp',
  'x/window.cpp'
]

executable(
  'xlpp',
  src,
  include_directories : include,
  dependencies : deps
)
